--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,7 +160,7 @@ app-root {
     }
 
     &-thumb {
-        background: #5d626c;
+        background: rgba(127, 143, 166, .8);
         border-radius: .85vw;
         box-shadow: none;
         outline: none;
